ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Architect</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. 
(Architect should be Record Type Designer and Legacy Claim Account = False)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Designer</value>
        </filterItems>
        <filterItems>
            <field>Account.Legacy_Claim_Account__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranties (Architect)</relationshipLabel>
    <relationshipName>Warranties4</relationshipName>
    <type>Lookup</type>
</CustomField>