ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Building where the product is installed</description>
    <label>Building</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Account must be of Record Type Building Location</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Building Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranties (Building)</relationshipLabel>
    <relationshipName>BuildingWarranties</relationshipName>
    <type>Lookup</type>
</CustomField>