ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Building_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Address__c</fullName>
    <formula>Building__r.BillingStreet &amp; BR() &amp;
 Building__r.BillingCity &amp; &quot; &quot; &amp;  Building__r.BillingState &amp; &quot; &quot; &amp;  Building__r.BillingPostalCode &amp; BR() &amp;
 Building__r.BillingCountry</formula>
    <label>Building Address</label>
    <type>Text</type>
</CustomField>