ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Confirmation_of_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_Repairs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-06-26 DO NOT USE see CLAIMSV2-38 Confirmation in writing that deficiencies, if any, from the Final Inspection report were repaired. This is being deprecated because we can&apos;t change a field type during a deployment.</description>
    <inlineHelpText>Confirmation in writing that deficiencies, if any, from the Final Inspection report were repaired</inlineHelpText>
    <label>Confirmation of Repairs? (deprecated)</label>
    <type>Checkbox</type>
</CustomField>