ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Conga_Warranty_Document_Footer__c.field-meta.xml
<CustomField>
    <fullName>Conga_Warranty_Document_Footer__c</fullName>
    <description>Document Footer for warranty services department. Used in the Warranty Conga Templates</description>
    <formula>CASE(Warranty_Service_Region__c, 
&apos;US&apos;, $Setup.Warranty_Claims_Defaults__c.US_Document_Footer__c, 
&apos;Western Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Western_Canada_Document_Footer__c, 
&apos;Eastern Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Eastern_Canada_Document_Footer__c, 
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Document Footer for warranty services department. Used in the Warranty Conga Templates</inlineHelpText>
    <label>Conga: Warranty Document Footer</label>
    <type>Text</type>
</CustomField>