ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Conga_Warranty_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Conga_Warranty_Office_Email__c</fullName>
    <description>Email address for warranty services department. Used in the Warranty Conga Templates</description>
    <formula>IF( RecordType.DeveloperName = &apos;Commercial_Warranty&apos;,
 $Setup.Warranty_Claims_Defaults__c.Warranty_Office_Email__c ,
CASE(Warranty_Service_Region__c,
&apos;US&apos;, $Setup.Warranty_Claims_Defaults__c.US_Email__c,
&apos;Western Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Western_Canada_Email__c,
&apos;Eastern Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Eastern_Canada_Email__c,
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email address for warranty services department. Used in the Warranty Conga Templates</inlineHelpText>
    <label>Conga: Warranty Office Email</label>
    <type>Text</type>
</CustomField>