ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Conga_Warranty_Office_Fax__c.field-meta.xml
<CustomField>
    <fullName>Conga_Warranty_Office_Fax__c</fullName>
    <description>Fax Number for warranty services department. Used in the Warranty Conga Templates</description>
    <formula>$Setup.Warranty_Claims_Defaults__c.Warranty_Office_Fax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fax Number for warranty services department. Used in the Warranty Conga Templates</inlineHelpText>
    <label>Conga: Warranty Office Fax</label>
    <type>Text</type>
</CustomField>