ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Conga_Warranty_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Conga_Warranty_Office_Phone__c</fullName>
    <description>Phone Number for warranty services department. Used in the Warranty Conga Templates</description>
    <formula>IF( RecordType.DeveloperName = &apos;Commercial_Warranty&apos;,
 $Setup.Warranty_Claims_Defaults__c.Warranty_Office_Phone__c ,
CASE(Warranty_Service_Region__c,
&apos;US&apos;, $Setup.Warranty_Claims_Defaults__c.US_Toll_Free__c,
&apos;Eastern Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Eastern_Canada_Toll_Free__c,
&apos;Western Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Western_Canada_Toll_Free__c,
null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Phone Number for warranty services department. Used in the Warranty Conga Templates</inlineHelpText>
    <label>Conga: Warranty Office Phone</label>
    <type>Text</type>
</CustomField>