ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Conga_Warranty_Owner_LastName__c.field-meta.xml
<CustomField>
    <fullName>Conga_Warranty_Owner_LastName__c</fullName>
    <description>Warranty Owner field to be used in the Warranty Conga Templates</description>
    <formula>Warranty_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Warranty Owner field to be used in the Warranty Conga Templates</inlineHelpText>
    <label>Conga: Warranty Owner LastName</label>
    <type>Text</type>
</CustomField>