ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Consultant_Fax__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Fax__c</fullName>
    <description>Consultant fax number. Used for Conga. Do not add to layouts.</description>
    <formula>Consultant__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Consultant fax number. Used for Conga. Do not add to layouts.</inlineHelpText>
    <label>Consultant Fax</label>
    <type>Text</type>
</CustomField>