ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Consultant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Phone__c</fullName>
    <description>Consultant Phone Number. Used for Conga. Do not add to layouts.</description>
    <formula>Consultant__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Consultant Phone Number. Used for Conga. Do not add to layouts.</inlineHelpText>
    <label>Consultant Phone</label>
    <type>Text</type>
</CustomField>