ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Consultant_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Consultant_PostalCode__c</fullName>
    <description>Consultant postal code. Used for Conga. Do not add to layouts.</description>
    <formula>Consultant__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Consultant postal code. Used for Conga. Do not add to layouts.</inlineHelpText>
    <label>Consultant PostalCode</label>
    <type>Text</type>
</CustomField>