ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contract_IAAP_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_IAAP_Expiry_Date__c</fullName>
    <description>From the contractor record.</description>
    <formula>Contractor__r.IAP_Registration_Expiry_Date__c</formula>
    <label>Contractor IAAP Expiry Date</label>
    <type>Date</type>
</CustomField>