ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contract_IAAP_Registered_Armourstick__c.field-meta.xml
<CustomField>
    <fullName>Contract_IAAP_Registered_Armourstick__c</fullName>
    <description>User Story : https://ikoussfsc.atlassian.net/browse/CLAIMSV2-1055</description>
    <formula>Contractor__r.IAAP_ArmourStick__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract IAAP Registered ArmourStick</inlineHelpText>
    <label>Contractor IAAP Registered Armourstick</label>
    <type>Checkbox</type>
</CustomField>