ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contract_IAAP_Registered_BUR__c.field-meta.xml
<CustomField>
    <fullName>Contract_IAAP_Registered_BUR__c</fullName>
    <description>Contract IAAP Registered BUR
User Story: https://ikoussfsc.atlassian.net/browse/CLAIMSV2-44</description>
    <formula>TEXT( Contractor__r.IAAP_Registered_BUR__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract IAAP Registered BUR</inlineHelpText>
    <label>Contractor IAAP Registered BUR</label>
    <type>Text</type>
</CustomField>