ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contract_IAAP_Registered_SBS__c.field-meta.xml
<CustomField>
    <fullName>Contract_IAAP_Registered_SBS__c</fullName>
    <description>Contractor IAA Registered SBS
User Story: https://ikoussfsc.atlassian.net/browse/CLAIMSV2-44</description>
    <formula>TEXT(Contractor__r.IAP_Registered_SBS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contractor IAA Registered SBS</inlineHelpText>
    <label>Contractor IAAP Registered SBS</label>
    <type>Text</type>
</CustomField>