ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contract_IAAP_Registration__c.field-meta.xml
<CustomField>
    <fullName>Contract_IAAP_Registration__c</fullName>
    <description>Contract IAAP_Registered_Highlight__c</description>
    <formula>TEXT(Contractor__r.IAAP_Registered_Highlight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract IAAP_Registered_Highlight__c</inlineHelpText>
    <label>Contract IAAP Registration</label>
    <type>Text</type>
</CustomField>