ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contract_Registration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Registration__c</fullName>
    <description>Contract Registration #
User Story: https://ikoussfsc.atlassian.net/browse/CLAIMSV2-44</description>
    <formula>Contractor__r.Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract Registration #</inlineHelpText>
    <label>Contractor Registration #</label>
    <type>Text</type>
</CustomField>