ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contractor_Address__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Address__c</fullName>
    <description>Full contractor address for use on agreements, letters, pizza deliveries, etc.</description>
    <formula>Contractor__r.BillingStreet + BR() + 
Contractor__r.BillingCity + &quot;, &quot;+ 
Contractor__r.BillingState +&quot; &quot; + 
Contractor__r.BillingPostalCode + BR() + 
Contractor__r.BillingCountry</formula>
    <label>Contractor Address</label>
    <type>Text</type>
</CustomField>