ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contractor_BillingCity__c.field-meta.xml
<CustomField>
    <fullName>Contractor_BillingCity__c</fullName>
    <description>Contract billing city. This is here largely for Conga purposes. It avoids a query.</description>
    <formula>Contractor__r.BillingCity</formula>
    <label>Contractor BillingCity</label>
    <type>Text</type>
</CustomField>