ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contractor_BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Contractor_BillingPostalCode__c</fullName>
    <description>Contractor Postal Code. Primarily here for Conga. Avoids a query.</description>
    <formula>Contractor__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor BillingPostalCode</label>
    <type>Text</type>
</CustomField>