ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contractor_BillingState__c.field-meta.xml
<CustomField>
    <fullName>Contractor_BillingState__c</fullName>
    <description>Contractor Billing State, for Conga Purposes primarily. Avoids running a query.</description>
    <formula>Contractor__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor BillingState</label>
    <type>Text</type>
</CustomField>