ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contractor_BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>Contractor_BillingStreet__c</fullName>
    <description>Contractor Billing Address. Largely here for Conga purposes but maybe for something else.</description>
    <formula>Contractor__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The contractor&apos;s full billing address.</inlineHelpText>
    <label>Contractor BillingStreet</label>
    <type>Text</type>
</CustomField>