ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contractor_IAAP_Registered_TPO__c.field-meta.xml
<CustomField>
    <fullName>Contractor_IAAP_Registered_TPO__c</fullName>
    <description>Claims V2 - 1075 - When a contractor is linked to a warranty and the contractor is IAAP TPO certified, then this field will reflect the same value found on the Contractor IAAP TPO Certified field.</description>
    <formula>Contractor__r.IAAP_TPO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contractor IAAP Registered TPO</inlineHelpText>
    <label>Contractor IAAP Registered TPO</label>
    <type>Checkbox</type>
</CustomField>