ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Contractor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Phone__c</fullName>
    <description>Contractor phone number. Primarily used for mapping to Conga documents.</description>
    <formula>Contractor__r.Phone</formula>
    <inlineHelpText>The contractor&apos;s main phone number.</inlineHelpText>
    <label>Contractor Phone</label>
    <type>Text</type>
</CustomField>