ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Count_of_Associated_Related_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Associated_Related_Products__c</fullName>
    <description>This displays the number of associated Related Products where record type = Warranty Products. This is done through a Flow and Process Builder.</description>
    <label>Count of Associated Related Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>