ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Days_Since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Modified__c</fullName>
    <description>This field has been created for CLAIMS -31. This is a formula field to calculate the number of days since the Warranty Last Modified</description>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the Warranty Last Modified</inlineHelpText>
    <label>Days Since Last Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>