ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Deck_Type__c.field-meta.xml
<CustomField>
    <fullName>Deck_Type__c</fullName>
    <label>Deck Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deck</valueSetName>
    </valueSet>
</CustomField>