ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Deficiency_Status_2_Year_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Deficiency_Status_2_Year_Inspection__c</fullName>
    <description>Status of deficiencies at the two year mark. This will be updated after the two year inspection is done and attached.</description>
    <inlineHelpText>Status of the commercial warranty&apos;s two year inspection.</inlineHelpText>
    <label>Deficiency Status (2 Year Inspection)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Installation_Deficiency_Status</valueSetName>
    </valueSet>
</CustomField>