ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Details_Roof_Specification__c.field-meta.xml
<CustomField>
    <fullName>Details_Roof_Specification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A detailed roof specification or scope of work</description>
    <inlineHelpText>A detailed roof specification or scope of work</inlineHelpText>
    <label>Details Roof Specification?</label>
    <type>Checkbox</type>
</CustomField>