ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Fasteners__c.field-meta.xml
<CustomField>
    <fullName>Fasteners__c</fullName>
    <label>Fasteners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dekfast #12</fullName>
            </value>
            <value>
                <fullName>Screws &amp; Plates</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Cap Nails</fullName>
            </value>
            <value>
                <fullName>Olympic Lite Wt.</fullName>
            </value>
            <value>
                <fullName>Insta-stik</fullName>
            </value>
            <value>
                <fullName>Thermostik Adhesive</fullName>
            </value>
            <value>
                <fullName>Fas N Free</fullName>
            </value>
            <value>
                <fullName>Olybond</fullName>
            </value>
            <value>
                <fullName>S/O</fullName>
            </value>
            <value>
                <fullName>Vis et Rondelles</fullName>
            </value>
            <value>
                <fullName>Asphalt</fullName>
            </value>
            <value>
                <fullName>V.R. ADHESIVE</fullName>
            </value>
            <value>
                <fullName>True Fast</fullName>
            </value>
            <value>
                <fullName>Ballast System (Inverted)</fullName>
            </value>
            <value>
                <fullName>Bakor Adhesive</fullName>
            </value>
            <value>
                <fullName>Adhesive</fullName>
            </value>
            <value>
                <fullName>Gravier de Riviere</fullName>
            </value>
            <value>
                <fullName>Dekfast #14</fullName>
            </value>
            <value>
                <fullName>Asphalte Colle</fullName>
            </value>
            <value>
                <fullName>Deckfast Screws</fullName>
            </value>
            <value>
                <fullName>Millennium</fullName>
            </value>
            <value>
                <fullName>Fixe Mecaniquement</fullName>
            </value>
            <value>
                <fullName>Fully Adhered</fullName>
            </value>
            <value>
                <fullName>Adphalte</fullName>
            </value>
            <value>
                <fullName>Cold Gold</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>