ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Final_Inspection_Report_Letter__c.field-meta.xml
<CustomField>
    <fullName>Final_Inspection_Report_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Final inspection report or a letter from the inspector confirming that the roof was inspected periodically  during the installation process and was installed according to good roofing practices</description>
    <inlineHelpText>Final inspection report or a letter from the inspector confirming that the roof was inspected periodically  during the installation process and was installed according to good roofing practices</inlineHelpText>
    <label>Final Inspection Report/Letter?</label>
    <type>Checkbox</type>
</CustomField>