ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/IAAP_Annual_Hot_Works_Insurance_Renewal__c.field-meta.xml
<CustomField>
    <fullName>IAAP_Annual_Hot_Works_Insurance_Renewal__c</fullName>
    <description>This is the IAAP Hot works annual expiry date from contractor account. ClaimsV2-623 https://ikoussfsc.atlassian.net/browse/CLAIMSV2-623</description>
    <formula>Contractor__r.Annual_Insurance_Renewal__c</formula>
    <inlineHelpText>This is the IAAP Hot works annual expiry date from contractor account</inlineHelpText>
    <label>IAAP Annual Hot Works Insurance Renewal</label>
    <type>Date</type>
</CustomField>