ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/IKO_External_ID__c.field-meta.xml
<CustomField>
    <fullName>IKO_External_ID__c</fullName>
    <description>This is the external id field to host all non-salesforce sourced data.</description>
    <externalId>true</externalId>
    <label>IKO External ID</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>