ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/IKO_Source_System__c.field-meta.xml
<CustomField>
    <fullName>IKO_Source_System__c</fullName>
    <description>This indicates the source system for the record</description>
    <label>IKO Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IKO_Source_System</valueSetName>
    </valueSet>
</CustomField>