ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Installation_Deficiency_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Deficiency_Status__c</fullName>
    <description>CLAIMSV2-38 Deficiencies are noted and must be reporated. You can&apos;t go from &quot;repairs required&quot; to &quot;no deficiencies&quot; because that makes no sense.</description>
    <inlineHelpText>The current status of the deficiencies, if any.</inlineHelpText>
    <label>Installation Deficiency Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Installation_Deficiency_Status</valueSetName>
    </valueSet>
</CustomField>