ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Insulation__c.field-meta.xml
<CustomField>
    <fullName>Insulation__c</fullName>
    <label>Insulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#15 Perf./3&quot; Polyiso</fullName>
            </value>
            <value>
                <fullName>1&quot; &amp; 2&quot; IKO THERM</fullName>
            </value>
            <value>
                <fullName>1&quot; &amp; 3&quot; IKO Therm</fullName>
            </value>
            <value>
                <fullName>1&quot; Fibreboard</fullName>
            </value>
            <value>
                <fullName>1&quot; Fibreboard- partial</fullName>
            </value>
            <value>
                <fullName>1&quot; IKOTherm</fullName>
            </value>
            <value>
                <fullName>1&quot; ISO</fullName>
            </value>
            <value>
                <fullName>1&quot; NF Weatherguard</fullName>
            </value>
            <value>
                <fullName>1&quot; Polyiso</fullName>
            </value>
            <value>
                <fullName>1&quot; ProtecRSS</fullName>
            </value>
            <value>
                <fullName>1&quot; Std. Coated</fullName>
            </value>
            <value>
                <fullName>1&quot; Std. Ctd.</fullName>
            </value>
            <value>
                <fullName>1.0&quot; &amp; 1.5&quot; &amp; 2.0&quot; IKO Therm</fullName>
            </value>
            <value>
                <fullName>1.0&quot; &amp; 2.0&quot; IKO Therm</fullName>
            </value>
            <value>
                <fullName>1.4&quot; + 2&quot; IKOTherm</fullName>
            </value>
            <value>
                <fullName>1.5 ISO &amp; Sloped Type 1 EPS</fullName>
            </value>
            <value>
                <fullName>1.5&quot; &amp; 1.8&quot; IKO Therm</fullName>
            </value>
            <value>
                <fullName>1.5&quot; &amp; 2.0&quot; IKO Therm</fullName>
            </value>
            <value>
                <fullName>1.5&quot; &amp; 2.5&quot; ISO</fullName>
            </value>
            <value>
                <fullName>1.5&quot; + 2&quot; IKOTherm</fullName>
            </value>
            <value>
                <fullName>1.5&quot; + 2.0&quot; Polyiso</fullName>
            </value>
            <value>
                <fullName>1.5&quot; + 3.0&quot; IKO Therm</fullName>
            </value>
            <value>
                <fullName>1.5&quot; Fibreboard</fullName>
            </value>
            <value>
                <fullName>1.5&quot; IKOTherm</fullName>
            </value>
            <value>
                <fullName>1.5&quot; ISO</fullName>
            </value>
            <value>
                <fullName>1.5&quot; Perlite</fullName>
            </value>
            <value>
                <fullName>1.5&quot; Polyiso</fullName>
            </value>
            <value>
                <fullName>1.5&quot; Roxall</fullName>
            </value>
            <value>
                <fullName>1.5&quot; Std. Coated</fullName>
            </value>
            <value>
                <fullName>1.5&quot;x4x4 IKO Therm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>