ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <description>Calculated Invoice Amount; minimum of $900. Automatically set to 0 if the &quot;Type&quot; is &quot;Labour and Membrane&quot;</description>
    <formula>IF (TEXT( Type__c ) = &apos;Labor &amp; Membrane&apos;, 0, 
MAX(
    Case(
	    TEXT(Warranty_Term__c),
		&quot;10&quot;, 900,
		&quot;15&quot;, 1200,
		&quot;20&quot;, 2000,
		&quot;25&quot;, 2500,
		&quot;30&quot;, 3000,
		600
	), 
    Square_Footage_of_Installation__c * 
    Case(
	    TEXT(Warranty_Term__c),
		&quot;10&quot;, 0.11,
		&quot;15&quot;, 0.15,
		&quot;20&quot;, 0.20,
		&quot;25&quot;, 0.25,
		&quot;30&quot;, 0.30,
		0.06
	)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated Invoice Amount; minimum of $900. Automatically set to 0 if the &quot;Type&quot; is &quot;Labour and Membrane&quot;</inlineHelpText>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>